syntax = "proto2";
package sessionsrv;

enum OAuthProvider {
  GitHub = 0;
  None = 1;
}

message Account {
  optional uint64 id = 1;
  optional string email = 2;
  optional string name = 3;
}

message AccountFindOrCreate {
  optional string name = 1;
  optional string email = 2;
}

// get an account by GH username
message AccountGet {
  optional string name = 1;
}

message AccountGetId {
  optional uint64 id = 1;
}

message AccountCreate {
  optional string name = 1;
  optional string email = 2;
}

message AccountUpdate {
  optional uint64 id = 1;
  optional string email = 2;
}

message AccountOriginInvitation {
  optional uint64 id = 1;
  optional uint64 origin_invitation_id = 2;
  optional uint64 account_id = 3;
  optional string account_name = 4;
  optional uint64 origin_id = 5;
  optional string origin_name = 6;
  optional uint64 owner_id = 7;
}

message AccountOriginInvitationCreate {
  optional uint64 origin_invitation_id = 1;
  optional uint64 account_id = 2;
  optional string account_name = 3;
  optional uint64 origin_id = 4;
  optional string origin_name = 5;
  optional uint64 owner_id = 6;
}

message AccountOriginInvitationAcceptRequest {
  optional uint64 account_id = 1;
  optional uint64 invite_id = 2;
  optional string origin_name = 3;
  optional bool ignore = 4;
}

message AccountOriginInvitationIgnoreRequest {
  optional uint64 account_id = 1;
  optional uint64 invitation_id = 2;
}

message AccountOriginInvitationRescindRequest {
  optional uint64 account_id = 1;
  optional uint64 invitation_id = 2;
}

message AccountInvitationListRequest {
  optional uint64 account_id = 1;
}

message AccountInvitationListResponse {
  optional uint64 account_id = 1;
  repeated AccountOriginInvitation invitations = 2;
}

message AccountOriginCreate {
  optional uint64 account_id = 1;
  optional string account_name = 2;
  optional uint64 origin_id = 3;
  optional string origin_name = 4;
}

message AccountOriginListRequest {
  optional uint64 account_id = 1;
}

message AccountOriginListResponse {
  optional uint64 account_id = 1;
  repeated string origins = 2;
}

message AccountOriginRemove {
  optional string account_name = 1;
  optional uint64 origin_id = 2;
}

enum SessionType {
  User = 0;
  Builder = 1;
}

message Session {
  optional uint64 id = 1;
  optional string email = 2;
  optional string name = 3;
  // base64 encoded binary representation of SessionToken
  optional string token = 4;
  optional uint32 flags = 5;
  optional string oauth_token = 6;
  optional SessionType session_type = 7;
}

message SessionCreate {
  optional string token = 1;
  optional uint32 extern_id = 2;
  optional string email = 3;
  optional string name = 4;
  optional OAuthProvider provider = 5;
  optional string app_token = 6;
  optional SessionType session_type = 7;
}

message SessionGet {
  optional SessionToken token = 1;
}

message SessionToken {
  optional uint64 account_id = 1;
  optional uint32 extern_id = 2;
  optional OAuthProvider provider = 3;
  optional bytes token = 4;
}
